--- a/src/app/components/menu-bar/menu-bar.html
+++ b/src/app/components/menu-bar/menu-bar.html
@@ -1,8 +1,10 @@
 <div class="menu-bar__container">
     <div class="menu-bar__logo">
-        <img src="" 
-            alt="" 
-            srcset="">
+        <img src="https://github.com/felipeAguiarCode/angular-psn-store-clone/blob/main/src/assets/ps-logo.png?raw=true" 
+            alt="playstation logo" 
+            srcset=""
+            width="140px"
+            height="32px">
         <div class="menu-bar__item">
             <ul>
                 <li><a href="">YOUTUBE</a></li>
