--- a/src/app/components/card/card.html
+++ b/src/app/components/card/card.html
@@ -1,1 +1,7 @@
-<p>card works!</p>
+<a href=""  class="card__container">
+    <img 
+    class="card__img"
+    src="https://github.com/felipeAguiarCode/angular-psn-store-clone/blob/main/src/assets/bt-5.jpg?raw=true" 
+    alt="" 
+    srcset="">
+</a>
