--- a/src/app/components/menu-bar/menu-bar.html
+++ b/src/app/components/menu-bar/menu-bar.html
@@ -7,10 +7,10 @@
             height="32px">
         <div class="menu-bar__item">
             <ul>
-                <li><a href="">YOUTUBE</a></li>
-                <li><a href="">LINKEDIN</a></li>
-                <li><a href="">GITHUB</a></li>
+                <li><a href="https://www.youtube.com/@gabrielnogueira1791">YOUTUBE</a></li>
+                <li><a href="https://www.linkedin.com/in/gabriel-nogueira-298611220/">LINKEDIN</a></li>
+                <li><a href="https://github.com/gabrielpr0g">GITHUB</a></li>
             </ul>
         </div>
     </div>
-</div>
+</div>  
