--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,3 +1,26 @@
 <div class="home__container">
-    <p>home works</p>
-</div>
+    <app-card
+   gameCover="https://upload.wikimedia.org/wikipedia/pt/thumb/0/02/Detroit_Become_Human_capa.png/330px-Detroit_Become_Human_capa.png"
+   gameLabel="DIGITAL"
+   gameType="DIGITAL | PS4"
+   gamePrice="R$ 129,90">
+</app-card>
+ <app-card
+   gameCover="https://image.api.playstation.com/vulcan/ap/rnd/202008/1020/PRfYtTZQsuj3ALrBXGL8MjAH.jpg"
+   gameLabel="EXCLUSIVE"
+   gameType="DISC | PS5"
+   gamePrice="R$ 229,90">
+</app-card>
+ <app-card
+   gameCover="https://cdn1.epicgames.com/offer/0a9e3c5ab6684506bd624a849ca0cf39/EGS_DeathStrandingDirectorsCut_KOJIMAPRODUCTIONS_S4_1200x1600-5f99e16507795f9b497716b470cfd876"
+   gameLabel="GAME AWARDS"
+   gameType="DISC | PS5"
+   gamePrice="R$ 129,90">
+</app-card>
+ <app-card
+   gameCover="https://image.api.playstation.com/vulcan/ap/rnd/202012/0815/0Xqi1LgRoEtJ5zlFprpd54Vu.png"
+   gameLabel="Family"
+   gameType="DISC | PS5"
+   gamePrice="R$ 119,90">
+</app-card>
+</div>  
