--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,4 @@
-<app-menu-bar></app-menu-bar>
-<app-home></app-home>
+<header>
+  <app-menu-bar></app-menu-bar>
+</header>
 <router-outlet></router-outlet>
